--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
+    <include src="./partials/partners.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
