--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/partners.html"></include>
+    <include src="./partials/weareyouknow.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
