--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <include src="./partials/hero.html"></include>
     <include src="./partials/partners.html"></include>
     <include src="./partials/weareyouknow.html"></include>
+    <include src="./partials/work.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
