--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Заголовок страницы</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -15,18 +21,28 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
     <include src="./partials/header.html"></include>
+    <!-- Svitlana -->
     <include src="./partials/hero.html"></include>
+    <!-- Alex -->
     <include src="./partials/partners.html"></include>
+    <!-- Ruslan -->
     <include src="./partials/weareyouknow.html"></include>
+    <!-- Yuliya -->
     <include src="./partials/work.html"></include>
+    <!-- Bogdan -->
     <include src="./partials/value.html"></include>
+    <!-- Viktor -->
     <include src="./partials/regional-partnerships.html"></include>
+    <!-- Volodymyr -->
     <include src="./partials/request.html"></include>
+    <!-- Elene -->
     <include src="./partials/industry.html"></include>
+    <!-- Margaryta -->
     <include src="./partials/resources.html"></include>
+    <!-- Oleg -->
     <include src="./partials/faq.html"></include>
     <include src="./partials/kickstart.html"></include>
-  <include src="./partials/footer.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
