--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <include src="./partials/partners.html"></include>
     <include src="./partials/weareyouknow.html"></include>
     <include src="./partials/work.html"></include>
+    <include src="./partials/value.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
