--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <include src="./partials/value.html"></include>
     <include src="./partials/regional-partnerships.html"></include>
     <include src="./partials/request.html"></include>
+    <include src="./partials/industry.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
