--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <include src="./partials/regional-partnerships.html"></include>
     <include src="./partials/request.html"></include>
     <include src="./partials/industry.html"></include>
+    <include src="./partials/resources.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
