--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <include src="./partials/industry.html"></include>
     <include src="./partials/resources.html"></include>
     <include src="./partials/faq.html"></include>
+    <include src="./partials/kickstart.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
