--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,9 @@
     <include src="./partials/resources.html"></include>
     <!-- Oleg -->
     <include src="./partials/faq.html"></include>
+    <!-- Yuliya -->
     <include src="./partials/kickstart.html"></include>
+    <!-- Ivan -->
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
